# ibot

./: .gitignore  README.md  config.example.toml  config.toml  pyproject.toml
owl/: __init__.py  main.py
owl/analytics_reporting/: __init__.py  plotter.py  reporter.py
owl/backtesting_engine/: __init__.py  engine.py
owl/config_manager/: __init__.py  config.py
owl/data_fetcher/: __init__.py  fetcher.py
owl/logging_setup/: __init__.py  logger.py
owl/order_executor/: __init__.py  executor.py
owl/position_manager/: __init__.py  manager.py
owl/scheduler/: __init__.py  scheduler.py
owl/signal_generator/: __init__.py  generator.py
owl/utils/: __init__.py
tests/: test_backtesting_engine.py  test_data_fetcher.py  test_main.py  test_signal_generator.py
